--- a/22-NSI-05.ipynb
+++ b/22-NSI-05.ipynb
@@ -43,11 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min': -2, 'max': 9}\n"
+     ]
+    }
+   ],
    "source": [
-    "#Tester votre code ici\n"
+    "#Tester votre code ici\n",
+    "def rechercheMinMax(tab):\n",
+    "    resultat = {'min': None, 'max': None}\n",
+    "    if len(tab) == 0:\n",
+    "        return resultat\n",
+    "    resultat['min'] = tab[0]\n",
+    "    resultat['max'] = tab[0]\n",
+    "    for i in range(1, len(tab)):\n",
+    "        if tab[i] < resultat['min']:\n",
+    "            resultat['min'] = tab[i]\n",
+    "        elif tab[i] > resultat['max']:\n",
+    "            resultat['max'] = tab[i]\n",
+    "    return resultat"
    ]
   },
   {
@@ -198,6 +218,8 @@
     "class Carte:\n",
     "    \"\"\"Initialise Couleur (entre 1 a 4), et Valeur (entre 1 a 13)\"\"\"\n",
     "    def __init__(self, c, v):\n",
+    "        assert isinstance(c, int) and 1 <= c <= 4, \"Couleur must be an integer between 1 and 4\"\n",
+    "        assert isinstance(v, int) and 1 <= v <= 13, \"Valeur must be an integer between 1 and 13\"\n",
     "        self.Couleur = c\n",
     "        self.Valeur = v\n",
     "\n",
@@ -225,12 +247,12 @@
     "\n",
     "    \"\"\"Remplit le paquet de cartes\"\"\"\n",
     "    def remplir(self):\n",
-    "        self.contenu = [ Carte(couleur, valeur) for couleur in range(1, 5) for valeur in range( 1, 14)]\n",
+    "        self.contenu = [Carte(couleur, valeur) for couleur in range(1, 5) for valeur in range( 1, 14)]\n",
     "\n",
-    "    \"\"\"Renvoie la Carte qui se trouve aï¿½ la position donnee\"\"\"\n",
+    "    \"\"\"Renvoie la Carte qui se trouve a la position donnee\"\"\"\n",
     "    def getCarteAt(self, pos):\n",
-    "        if 0 <= pos < 52 :\n",
-    "            return self.contenu[pos]"
+    "        assert isinstance(pos, int) and 0 <= pos < len(self.contenu), \"pos must be a non-negative integer less than the length of the deck\"\n",
+    "        return self.contenu[pos]"
    ]
   },
   {
