--- a/22-NSI-04.ipynb
+++ b/22-NSI-04.ipynb
@@ -47,14 +47,11 @@
     "    des couples d'entiers consécutifs successifs \"\n",
     "    Entrée: un tableau de nombres entiers\n",
     "    Sortie : liste (éventuellement vide) des couples d'entiers consécutifs successifs qu'il peut y avoir dans tab. \"\"\"\n",
-    "    if tab == []:\n",
-    "        return None\n",
-    "    f,res = tab[0],[]\n",
-    "    for i in range(1,len(tab)):\n",
-    "        if tab[i] == f + 1:\n",
-    "            res.append((l,tab[i]))\n",
-    "        l= tab[i]\n",
-    "    return res"
+    "    couples = []\n",
+    "    for i in range(len(tab) - 1):\n",
+    "        if tab[i] + 1 == tab[i + 1] or tab[i] - 1 == tab[i + 1]:\n",
+    "            couples.append((tab[i], tab[i + 1]))\n",
+    "    return couples"
    ]
   },
   {
